--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@9.1.1",
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3333",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@dimforge/rapier2d": "^0.13.1",
     "@vueuse/core": "^10.9.0",
+    "pixi-viewport": "^5.0.3",
     "pixi.js": "^8.2.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
