--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@dimforge/rapier2d": "^0.13.1",
     "@vueuse/core": "^10.9.0",
+    "pinia": "^2.1.7",
     "pixi-viewport": "^5.0.3",
     "pixi.js": "^8.2.0",
     "vue": "^3.4.27",
