--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@dimforge/rapier2d": "^0.13.1",
     "@vueuse/core": "^10.9.0",
+    "navmesh": "^2.3.1",
     "navmesh-generator": "^1.0.3",
     "pinia": "^2.1.7",
     "pixi-viewport": "^5.0.3",
