--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@dimforge/rapier2d": "^0.13.1",
     "@dimforge/rapier2d-compat": "^0.13.1",
     "@vueuse/core": "^10.11.0",
+    "@vueuse/math": "^10.11.0",
     "navmesh": "^2.3.1",
     "navmesh-generator": "^1.0.3",
-    "pinia": "^2.1.7",
     "pixi-viewport": "^5.0.3",
-    "pixi.js": "^8.2.0",
+    "pixi.js": "^8.2.1",
     "vue": "^3.4.30",
     "vue-router": "^4.4.0"
   },
@@ -44,7 +44,7 @@
     "typescript": "^5.5.2",
     "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
+    "unplugin-vue-components": "^0.27.1",
     "unplugin-vue-macros": "^2.9.5",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.3.1",
